# libxdiff-rs

./: Cargo.toml  README.md
libxdiff-sys/: Cargo.toml  build.rs
libxdiff-sys/libxdiff-0.23/: Makefile  config.status
libxdiff-sys/libxdiff-0.23/man/: Makefile
libxdiff-sys/libxdiff-0.23/test/: Makefile
libxdiff-sys/libxdiff-0.23/tools/: Makefile
libxdiff-sys/libxdiff-0.23/xdiff/: Makefile
src/: bin.rs  lib.rs  mmblocks.rs  mmfile.rs  tests.rs
