[package]
name = "libxdiff"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Levin <bplevin36@gmail.com>"]
categories = ["api-bindings"]
description = "Rust bindings for the libxdiff C library"
license = "MIT"

[dependencies]
libc = "0.2.139"
libxdiff-sys = { path = "libxdiff-sys", version = "0.1.0" }

[[bin]]
name = "devtest"
path = "src/bin.rs"
